More test added, but I want to make the max delay configurable